--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
 = redmine_open_search
 
 This is a plugin for Redmine to add support for OpenSearch.
+
+*Attention: This plugin is currently under development.*
