--- a/README.rdoc
+++ b/README.rdoc
@@ -2,4 +2,4 @@
 
 This is a plugin for Redmine to add support for OpenSearch.
 
-*Attention: This plugin is currently under development.*
+== Attention: This plugin is currently under development.
